# boomchess

./: .gitignore  BoomChess  BoomChess.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
data/: raw_positions_small.csv
src/: Board.cpp  Board.h  Common.h  Config.cpp  Config.h  Driver.cpp  Driver.h  EvalParms.h  Evaluator.cpp  Evaluator.h  FenParsing.cpp  Game.cpp  Game.h  Metrics.h  Move.h  MoveGeneration.cpp  MoveGeneration.h  MoveGenerator.cpp  MoveGenerator.h  Perft.cpp  Piece.cpp  Piece.h  Search.cpp  Search.h  Timer.h  TranspositionTable.cpp  TranspositionTable.h  UCI.cpp  UCI.h  ZobristKey.cpp  ZobristKey.h  main.cpp  nnue.cpp  nnue.h
src/tools/: DatasetGeneration.h
